nav tree for all pages needed

--- a/src/views/pages/account/change-password.ejs
+++ b/src/views/pages/account/change-password.ejs
@@ -16,9 +16,9 @@
 <body>
     <%- include('../../partials/header-medium.ejs') %>
     <%- include('../../partials/nav-tree', { nav_tree__data: [
-        { text: 'Trang chủ', link: '/' },
-        { text: 'Cá nhân', link: '#' },
-        { text: 'Đổi mật khẩu', link: '/account/change-password' }
+        { text: 'Trang chủ', link: "/"" },
+        { text: 'Cá nhân', link: "" },
+        { text: 'Đổi mật khẩu', link: "/account/change-password" }
     ] }) %>
     <%- include('../../components/on-top-btn') %>
 
