--- a/src/views/pages/account/history.ejs
+++ b/src/views/pages/account/history.ejs
@@ -25,7 +25,7 @@
     <%- include('../../partials/header-medium.ejs', { user }) %>
     <%- include("../../partials/nav-tree", { nav_tree__data: [
         { text: "Trang chủ", link: "/" },
-        { text: "Cá nhân", link: "#" },
+        { text: "Cá nhân", link: "" },
         { text: "Lịch sử đặt phòng", link: "/account/history" }
     ]}) %>
     <%- include('../../components/on-top-btn') %>
