--- a/src/views/pages/account/information.ejs
+++ b/src/views/pages/account/information.ejs
@@ -17,7 +17,7 @@
     <%- include("../../partials/header-medium", { user }) %>
     <%- include("../../partials/nav-tree", { nav_tree__data: [
         { text: "Trang chủ", link: "/" },
-        { text: "Cá nhân", link: null },
+        { text: "Cá nhân", link: ""},
         { text: "Thông tin cá nhân", link: "/account/information" }
     ]}) %>
     <%- include('../../components/on-top-btn') %>
