--- a/src/views/pages/booking/cancellation.ejs
+++ b/src/views/pages/booking/cancellation.ejs
@@ -16,8 +16,7 @@
 
     <%- include('../../partials/nav-tree', { nav_tree__data: [
         { text: 'Trang chủ', link: '/' },
-        { text: 'Đặt phòng', link: '' },
-        { text: 'Hủy phòng' }
+        { text: 'Hủy phòng', link: "" }
     ] }) %>
 
     <main class="content-container">
