--- a/src/views/pages/booking/information.ejs
+++ b/src/views/pages/booking/information.ejs
@@ -16,7 +16,7 @@
   <%- include('../../partials/header-small', { user }) %>
   <%- include('../../partials/nav-tree', { nav_tree__data: [
         { text: 'Trang chủ', link: "/" },
-        { text: 'Đặt phòng', link: null },
+        { text: 'Đặt phòng', link: ""},
         { text: 'Thông tin đặt phòng', link: "/booking/information" }
     ] }) %>
   <main>
