--- a/src/views/pages/booking/payment.ejs
+++ b/src/views/pages/booking/payment.ejs
@@ -19,7 +19,7 @@
 	<%- include('../../partials/nav-tree', { nav_tree__data: [
         { text: 'Trang chủ', link: '/' },
         { text: 'Đặt phòng', link: '' },
-        { text: 'Chọn phương thức thanh toán' }
+        { text: 'Chọn phương thức thanh toán', link: '/' }
     ] }) %>
 
 	<div class="payment-container">
