--- a/src/views/pages/notifications/account-update.ejs
+++ b/src/views/pages/notifications/account-update.ejs
@@ -15,7 +15,8 @@
   <%- include('../../partials/header-medium') %>
   <%- include('../../partials/nav-tree', { nav_tree__data: [
     { text: 'Trang chủ', link: "/" },
-    { text: ' Thông báo', link: "/notifications/account-update"}
+    { text: ' Thông báo', link: "/notifications/account-update"},
+	{ text: ' Cập nhật tài khoản', link: "/notifications/account-update"},
 ] }) %>
 
 
