--- a/src/views/pages/booking/success.ejs
+++ b/src/views/pages/booking/success.ejs
@@ -13,6 +13,10 @@
 
 <body>
 	<%- include('../../partials/header-small') %>
+	<%- include('../../partials/nav-tree', { nav_tree__data: [
+        { text: 'Trang chủ', link: "/" },
+        { text: 'Đặt phòng', link: "" }
+    ] }) %>
 
 	<main class="content-container">
 		<section class="main-content">
