--- a/src/public/styles/pages/booking/success.css
+++ b/src/public/styles/pages/booking/success.css
@@ -1,6 +1,7 @@
 @import url("/styles/base.css");
 @import url("/styles/partials/header-small.css");
 @import url("/styles/partials/footer.css");
+@import url("/styles/partials/nav-tree.css");
 
 body {
     width: 100vw;
@@ -205,4 +206,4 @@ a.order-btn {
 
 a {
     text-decoration: none;
-  }
+}
