--- a/src/views/pages/booking/detail.ejs
+++ b/src/views/pages/booking/detail.ejs
@@ -15,7 +15,7 @@
 	<%- include('../../partials/header-small') %>
 	<%- include('../../partials/nav-tree', { nav_tree__data: [
         { text: 'Trang chủ', link: "/" },
-        { text: 'Thông tin đặt phòng', link: "/booking/detail" }
+        { text: 'Chi tiết đặt phòng', link: "#" }
     ] }) %>
 	<main class="content-container">
 		<section class="title">
