--- a/src/views/pages/booking/success.ejs
+++ b/src/views/pages/booking/success.ejs
@@ -15,7 +15,7 @@
 	<%- include('../../partials/header-small') %>
 	<%- include('../../partials/nav-tree', { nav_tree__data: [
         { text: 'Trang chủ', link: "/" },
-        { text: 'Đặt phòng', link: "" }
+        { text: 'Xác nhận đặt phòng', link: "#" }
     ] }) %>
 
 	<main class="content-container">
