--- a/src/views/pages/search/detail.ejs
+++ b/src/views/pages/search/detail.ejs
@@ -8,15 +8,15 @@
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous" />
 	<link rel="stylesheet" href="/styles/pages/search/detail.css" />
 	<link rel="shortcut icon" href="/imgs/favicon.svg" type="image/x-icon">
-    <link rel="stylesheet" href="/styles/base.css" />
+	<link rel="stylesheet" href="/styles/base.css" />
 	<title>2WAYS.com</title>
 </head>
 
 <body>
 	<%- include('../../partials/header-small', { user }) %>
-    <%- include('../../partials/nav-tree', { nav_tree__data: [
+	<%- include('../../partials/nav-tree', { nav_tree__data: [
         { text: 'Trang chủ', link: "/" },
-        { text: 'Tìm kiếm', link: "/search/results" }
+        { text: 'Chi tiết chỗ ở', link: "#" }
     ] }) %>
 
 	<main class="content-container">
