--- a/src/views/pages/auth/register.ejs
+++ b/src/views/pages/auth/register.ejs
@@ -56,8 +56,7 @@
 
 				<div class="row">
 					<label for="form__password" class="form-label">Mật khẩu <span class="red">*</span></label>
-					<p class="form-text register__note">Đặt mật khẩu có ít nhất là 8 ký tự, trong đó có cả chữ và
-						số.</p>
+					<p class="form-text register__note">Đặt mật khẩu có ít nhất là 8 ký tự, trong đó có cả chữ và số, không bao gồm dấu cách và ký tự đặc biệt.</p>
 					<div class="input_form">
 						<input type="password" class="form-control form__password" id="form__password" placeholder="Nhập mật khẩu" />
 						<span class="material-symbols-outlined" id="eye-open-psw">visibility</span>
