--- a/src/public/styles/components/search-bar.css
+++ b/src/public/styles/components/search-bar.css
@@ -109,6 +109,7 @@
 }
 
 div.daterangepicker {
+    display: none;
     font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
     margin-top: 10px;
 }
