--- a/src/views/pages/booking/information.ejs
+++ b/src/views/pages/booking/information.ejs
@@ -200,7 +200,7 @@
 						<input class="form-control" name="note" type="text">
 					</div>
 				</section>
-				<button type="submit" class="btn--filled sec">
+				<button type="button" class="btn--filled sec">
 					<div style="font-weight: bold;" class=" status-layer">
 						<span>Thanh toán</span>
 					</div>
