update lpl branch

--- a/src/public/styles/pages/booking/success.css
+++ b/src/public/styles/pages/booking/success.css
@@ -1,6 +1,8 @@
 @import url("/styles/base.css");
 @import url("/styles/partials/header-small.css");
 @import url("/styles/partials/footer.css");
+@import url("/styles/partials/nav-tree.css");
+
 
 body {
     width: 100vw;
