--- a/src/views/pages/search/results.ejs
+++ b/src/views/pages/search/results.ejs
@@ -13,8 +13,8 @@
 </head>
 
 <body>
-    <%- include('../../partials/header-medium') %>
-    <%- include('../../partials/nav-tree', { nav_tree__data: [
+  <%- include('../../partials/header-medium') %>
+  <%- include('../../partials/nav-tree', { nav_tree__data: [
         { text: 'Trang chủ', link: "/" },
         { text: 'Tìm kiếm', link: "/search/results" }
     ] }) %>
@@ -26,7 +26,7 @@
           <span class="material-symbols-outlined">location_on</span>
         </div>
         <div class="filter-sidebar__map-button">
-          <a href="#" target="blank" type="button" class="btn map-button">Hiển thị trên bản đồ</a>
+          <a href='#' class="btn map-button">Hiển thị trên bản đồ</a>
         </div>
       </div>
 
