--- a/src/views/components/search-result-nsale.ejs
+++ b/src/views/components/search-result-nsale.ejs
@@ -10,7 +10,7 @@
         <% } %>
       </div>
       <div class="nresult-block__extensions">
-        <a href="h#" target="blank" class="nresult-block__map">Xem trên bản đồ</a>
+        <a href="<%= result.acco_location_link %>" target="blank" class="nresult-block__map">Xem trên bản đồ</a>
         <div class="nresult-block__details">
           <span class="material-symbols-outlined">beach_access</span>
           <p class="nresult-block__details-content">Giáp biển</p>
