--- a/src/views/components/search-result-sale.ejs
+++ b/src/views/components/search-result-sale.ejs
@@ -17,7 +17,7 @@
           <% } %>
         </div>
         <div class="result-block__extensions">
-          <a href="#" target="blank" class="result-block__map">Xem trên bản đồ</a>
+          <a href="" target="blank" class="result-block__map">Xem trên bản đồ</a>
           <div class="result-block__details">
             <span class="material-symbols-outlined">beach_access</span>
             <p class="result-block__details-content">Giáp biển</p>
