Fix max-width and margin of all page

--- a/src/public/styles/pages/account/change-password.css
+++ b/src/public/styles/pages/account/change-password.css
@@ -10,12 +10,8 @@ html {
     color: var(--black);
 }
 
-/* body {
-    width: 100vw;
-} */
-
 .change-password-container {
-    margin: 0 auto;
+    margin: 12px auto;
     width: 80%;
     max-width: 1152px;
     display: flex;
