--- a/src/public/styles/pages/account/history.css
+++ b/src/public/styles/pages/account/history.css
@@ -13,12 +13,8 @@ html {
     color: var(--black);
 }
 
-/* body {
-    width: 100vw;
-} */
-
 .booking-history-container {
-    margin: 0 auto;
+    margin: 12px auto;
     width: 80%;
     max-width: 1152px;
     display: flex;
