--- a/src/public/styles/pages/auth/forgot.css
+++ b/src/public/styles/pages/auth/forgot.css
@@ -17,6 +17,7 @@
 
 .content-container {
     width: 80%;
+    max-width: 1152px;
     min-height: calc(100vh - 300px - 112px);
     margin: auto;
     display: flex;
