--- a/src/public/styles/pages/auth/register.css
+++ b/src/public/styles/pages/auth/register.css
@@ -11,6 +11,7 @@ body {
 
 .content-container {
     width: 80%;
+    max-width: 1152px;
     margin: 5vh auto;
     display: inherit;
     justify-content: space-between;
