--- a/src/public/styles/pages/booking/cancellation.css
+++ b/src/public/styles/pages/booking/cancellation.css
@@ -18,7 +18,7 @@ body {
 .content-container {
     width: 100%;
     max-width: 1152px;
-    margin: 5vh auto;
+    margin: 12px auto;
     display: flex;
     justify-content: space-around;
     /* gap: 12px; */
@@ -53,6 +53,7 @@ h3 {
 p {
     font-size: 16px;
 }
+
 .main-content {
     width: 60%;
     display: inherit;
