--- a/src/public/styles/pages/site/privacy-policy.css
+++ b/src/public/styles/pages/site/privacy-policy.css
@@ -30,7 +30,7 @@ body {
 .private__container {
     width: 80%;
     max-width: 1152px;
-    margin: 12px auto 32px auto;
+    margin: 12px auto;
 }
 
 .private__header {
