Fix error status in /account/change-password

--- a/src/public/styles/pages/account/change-password.css
+++ b/src/public/styles/pages/account/change-password.css
@@ -279,3 +279,14 @@ button.btn--outlined.pri {
     width: 150px;
     margin-right: 4px;
 }
+
+.error-message {
+    color: var(--red);
+    display: flex;
+    justify-content: flex-end;
+    margin: 12px 0;
+}
+
+.error-div {
+    border: 1px solid var(--red);
+}
