--- a/src/views/pages/account/change-password.ejs
+++ b/src/views/pages/account/change-password.ejs
@@ -104,22 +104,24 @@
 			</p>
 
 			<div class="form__items">
-				<div class="form__item">
+				<div class="form__item form__oldPass">
 					<h1>Mật khẩu cũ:</h1>
 					<input class="form-control" type="text" placeholder="Nhập mật khẩu cũ" name='oldPass' />
 				</div>
 
-				<div class="form__item">
+				<div class="form__item form__newPass">
 					<h1>Mật khẩu mới:</h1>
 					<input class="form-control form__password" type="text" placeholder="Nhập mật khẩu mới" name='newPass' />
-					<div class="error-message" id="error-message"></div>
 				</div>
 
-				<div class="form__item">
+				<div class="form__item form__newPassConfirm">
 					<h1>Xác nhận mật khẩu:</h1>
 					<input class="form-control form__password-confirm" type="text" placeholder="Nhập lại mật khẩu mới" name='newPassConfirm' />
 				</div>
 			</div>
+
+			<div class="error-message" id="error-message"></div>
+
 			<div class="form__submitbutton">
 				<button class="form__submit1 cancel-btn">Hủy</button>
 
