--- a/src/public/styles/pages/notification/account-update.css
+++ b/src/public/styles/pages/notification/account-update.css
@@ -27,6 +27,7 @@ a:hover {
 
 .nofi-container {
     width: 80%;
+    min-height: 60vh;
     max-width: 1152px;
     padding: 0;
     margin: 12px auto;
