--- a/src/public/styles/pages/notification/promotion.css
+++ b/src/public/styles/pages/notification/promotion.css
@@ -24,6 +24,7 @@ a {
 .nofi-container {
     width: 80%;
     max-width: 1152px;
+    min-height: 60vh;
     padding: 0;
     margin: 12px auto;
     display: flex;
