Fix read-all notifications

--- a/src/views/pages/notifications/promotion.ejs
+++ b/src/views/pages/notifications/promotion.ejs
@@ -31,9 +31,7 @@
     </aside>
 
     <section class="nofi__main">
-      <form action="/notifications/read-all" method="POST">
-        <button class="btn--outlined pri" type="submit">Đánh dấu tất cả là đã đọc</button>
-      </form>
+        <button class="btn--outlined pri btn-read-all">Đánh dấu tất cả là đã đọc</button>
       <% if (data_noti.length == 0) { %>
       <h3>Bạn chưa có thông báo</h3>
       <% } else { %>
