Fix notifications account-update

--- a/src/views/pages/notifications/account-update.ejs
+++ b/src/views/pages/notifications/account-update.ejs
@@ -30,8 +30,10 @@
       </div>
       <hr />
       <div class="aside-wrapper__aside-section">
-        <p class="btn-update">Cập nhật tài khoản</p>
-        <p class="btn-promo">Thông tin khuyến mãi</p>
+        <!-- <p class="btn-update">Cập nhật tài khoản</p>
+        <p class="btn-promo">Thông tin khuyến mãi</p> -->
+        <a href="/notifications/account-update" class="btn-update">Cập nhật tài khoản</a>
+				<a href="/notifications/promotion" class="btn-promo">Thông tin khuyến mãi</a>
       </div>
     </aside>
     <section class="nofi__main">
