--- a/src/views/components/search-bar.ejs
+++ b/src/views/components/search-bar.ejs
@@ -27,7 +27,7 @@
 				<span>Người lớn</span>
 				<div class="counter--wraper">
 					<span class="minus minus-adults">-</span>
-					<input name="adult" type="number" value="2" id="adult__quantity" class="quantity">
+					<input name="adult" type="number" value="" id="adult__quantity" class="quantity">
 					<span class="plus plus-adults">+</span>
 				</div>
 			</div>
@@ -36,7 +36,7 @@
 				<span>Trẻ em</span>
 				<div class="counter--wraper">
 					<span class="minus minus-children">-</span>
-					<input name="child" type="number" value="0" id="child__quantity" class="quantity">
+					<input name="child" type="number" value="" id="child__quantity" class="quantity">
 					<span class="plus plus-children">+</span>
 				</div>
 			</div>
@@ -45,7 +45,7 @@
 				<span>Phòng</span>
 				<div class="counter--wraper">
 					<span class="minus minus-rooms">-</span>
-					<input name="room" type="number" value="1" id="room__quantity" class="quantity">
+					<input name="room" type="number" value="" id="room__quantity" class="quantity">
 					<span class="plus plus-rooms">+</span>
 				</div>
 			</div>
