--- a/src/views/pages/account/change-password.ejs
+++ b/src/views/pages/account/change-password.ejs
@@ -14,6 +14,7 @@
 </head>
 
 <body>
+
 	<%- include('../../partials/header-medium.ejs') %>
 	<%- include('../../partials/nav-tree', { nav_tree__data: [
         { text: 'Trang chủ', link: "/" },
@@ -23,7 +24,7 @@
 	<%- include('../../components/on-top-btn') %>
 
 
-	<div class="change-password-container">
+	<main class="change-password-container">
 		<aside class="aside-content">
 			<div class="aside-content__profile">
 				<img class="aside-content__img" src="/imgs/user/<%= user.avatar ?? 'default.jpg' %>" alt="" />
@@ -56,7 +57,6 @@
 				<a style='text-decoration: none' id="logoutButton">
 					<p>Đăng xuất</p>
 				</a>
-				<!-- <button id="logoutButton" style='text-decoration: none'>Đăng xuất</button> -->
 			</div>
 			<div class="popup">
 				<div class="popup__main">
@@ -128,19 +128,16 @@
 				<button class="form__submit2 confirm-button">Xác nhận</button>
 			</div>
 		</section>
-	</div>
+	</main>
 
 	<%- include('../../partials/footer.ejs') %>
 	<%- include('../../components/success-popup.ejs') %>
 
-
-	<script src="/scripts/change-password.js"></script>
-	<script src="/scripts/search-bar.js"></script>
-	<script src="/scripts/header-medium.js"></script>
-	<script src="/scripts/logout-popup.js"></script>
+	<script src="/scripts/account/change-password.js"></script>
+	<script src="/scripts/components/logout-popup.js"></script>
+	<script src="/scripts/partials/search-bar.js"></script>
+	<script src="/scripts/partials/header-medium.js"></script>
 	<script src="/scripts/base.js"></script>
-
-
 
 </body>
 
