--- a/src/views/pages/auth/login.ejs
+++ b/src/views/pages/auth/login.ejs
@@ -12,6 +12,7 @@
 </head>
 
 <body>
+
 	<%- include('../../partials/header-small-title', {
         title: 'Đăng nhập',
         help: 'Bạn quên mật khẩu?'
@@ -43,7 +44,6 @@
 					</div>
 					<div class="error"></div>
 				</div>
-				<!-- <div class="error-message" id="error-message"></div> -->
 				<button id="login-button" type="submit" class="btn form__submit">
 					Đăng nhập
 				</button>
@@ -56,8 +56,9 @@
 	<%- include('../../partials/footer') %>
 
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-	<script src="/scripts/login.js"></script>
-	<script src="/scripts/header-small-title.js"></script>
+	<script src="/scripts/partials/header-small-title.js"></script>
+	<script src="/scripts/auth/login.js"></script>
+
 </body>
 
 </html>
