--- a/src/views/pages/search/detail.ejs
+++ b/src/views/pages/search/detail.ejs
@@ -13,6 +13,7 @@
 </head>
 
 <body>
+
 	<%- include('../../partials/header-small', { user }) %>
 	<%- include('../../partials/nav-tree', { nav_tree__data: [
         { text: 'Trang chủ', link: "/" },
@@ -196,8 +197,9 @@
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"> </script>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 	<script src="/jquery/jquery.js"></script>
-	<script src="/scripts/search-detail.js"></script>
-	<script src="/scripts/room.js"></script>
+	<script src="/scripts/components/room.js"></script>
+	<script src="/scripts/search/detail.js"></script>
+
 </body>
 
 </html>
