--- a/src/views/pages/site/index.ejs
+++ b/src/views/pages/site/index.ejs
@@ -13,7 +13,9 @@
 </head>
 
 <body>
+
 	<%- include('../../partials/header-full', { user }) %>
+
 	<main>
 		<section id="discover-section" class="mt-64 primary-text">
 			<h1 class="section__title">Khám phá về 2Ways</h1>
@@ -119,13 +121,17 @@
 			</div>
 		</section>
 	</main>
+
 	<div class="mt-48"></div>
+
 	<%- include('../../partials/footer') %>
+
 </body>
+
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-<script src="/scripts/header-full.js"></script>
-<script src="/scripts/search-bar.js"></script>
+<script src="/scripts/partials/header-full.js"></script>
+<script src="/scripts/partials/search-bar.js"></script>
+<script src="/scripts/site/index.js"></script>
 <script src="/scripts/base.js"></script>
-<script src="/scripts/index.js"></script>
 
 </html>
