--- a/src/views/pages/account/card-fill.ejs
+++ b/src/views/pages/account/card-fill.ejs
@@ -13,9 +13,11 @@
 </head>
 
 <body>
+
 	<%- include('../../partials/header-medium') %>
 
-	<div class="payment-account-container">
+	<main class="payment-account-container">
+
 		<aside class="aside-content">
 			<div class="aside-content__profile">
 				<img class="aside-content__img" src="/imgs/milo.jpg" alt="avatar" />
@@ -40,7 +42,6 @@
 				<a style='text-decoration: none' id="logoutButton">
 					<p>Đăng xuất</p>
 				</a>
-				<!-- <button id="logoutButton" style='text-decoration: none'>Đăng xuất</button> -->
 			</div>
 			<div class="popup">
 				<div class="popup__main">
@@ -110,9 +111,9 @@
 					</div>
 				</div>
 			</div>
-
 		</section>
-	</div>
+
+	</main>
 
 	<%- include('../../components/otp') %>
 	<%- include('../../components/success-popup') %>
@@ -120,12 +121,12 @@
 	<%- include('../../components/credit-account-popup') %>
 	<%- include('../../partials/footer') %>
 
-	<script src="/scripts/payment-account.js"></script>
-	<script src="/scripts/bank-account-popup.js"></script>
-	<script src="/scripts/credit-account-popup.js"></script>
-	<script src="/scripts/search-bar.js"></script>
-	<script src="/scripts/header-medium.js"></script>
-	<script src="/scripts/logout-popup.js"></script>
+	<script src="/scripts/account/payment.js"></script>
+	<script src="/scripts/components/bank-account-popup.js"></script>
+	<script src="/scripts/components/credit-account-popup.js"></script>
+	<script src="/scripts/components/logout-popup.js"></script>
+	<script src="/scripts/partials/search-bar.js"></script>
+	<script src="/scripts/partials/header-medium.js"></script>
 
 </body>
 
