--- a/src/views/pages/admin/dashboard.ejs
+++ b/src/views/pages/admin/dashboard.ejs
@@ -16,6 +16,7 @@
 	<%- include('../../partials/admin-nav') %>
 
 	<main>
+
 		<section class="main-container">
 			<h2>Chào mừng Admin0123</h2>
 			<div class="summary">
@@ -88,10 +89,11 @@
 				<p>Biểu đồ thể hiện tỉ lệ giữa số đơn đặt, lượt đánh giá, và điểm đánh giá trung bình theo tháng trong năm 2023.</p>
 			</div>
 		</section>
+
 	</main>
 
 	<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-	<script src="/scripts/dashboard.js"></script>
+	<script src="/scripts/admin/dashboard.js"></script>
 
 </body>
 
