--- a/src/views/pages/auth/forgot.ejs
+++ b/src/views/pages/auth/forgot.ejs
@@ -13,6 +13,7 @@
 </head>
 
 <body>
+
 	<%- include('../../partials/header-small-title', {
         title: "Quên mật khẩu",
         help: "Bạn cần sự trợ giúp?"
@@ -41,8 +42,9 @@
 	<%- include('../../partials/footer') %>
 
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-	<script src="/scripts/forgot-password.js"></script>
-	<script src="/scripts/header-small-title.js"></script>
+	<script src="/scripts/partials/header-small-title.js"></script>
+	<script src="/scripts/forgot.js"></script>
+
 </body>
 
 </html>
