--- a/src/views/pages/auth/register.ejs
+++ b/src/views/pages/auth/register.ejs
@@ -12,12 +12,14 @@
 </head>
 
 <body>
+
 	<%- include('../../partials/header-small-title', {
         title: 'Đăng ký',
         help: 'Bạn cần sự trợ giúp?'
     }) %>
 
 	<main class="content-container">
+
 		<section class="intro">
 			<img src="/imgs/logo--filled.svg" alt="2WAYS.com" class="intro__logo" />
 			<div class="intro__content">
@@ -62,7 +64,6 @@
 						<span class="material-symbols-outlined" id="eye-open-psw">visibility</span>
 						<div class="error"></div>
 					</div>
-					<!-- <div class="error"></div> -->
 				</div>
 
 				<div class="row">
@@ -73,9 +74,7 @@
 						<span class="material-symbols-outlined" id="eye-open-cpsw">visibility</span>
 						<div class="error"></div>
 					</div>
-					<!-- <div class="error"></div> -->
 				</div>
-				<!-- <div class="error-message" id="error-message"></div> -->
 				<button id="register-button" type="submit" class="btn form__submit">Đăng ký</button>
 			</form>
 
@@ -86,13 +85,15 @@
 				<a href="/privacy-policy">chính sách bảo mật</a>.
 			</p>
 		</section>
+
 	</main>
 
 	<%- include('../../partials/footer.ejs') %>
 
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-	<script src="/scripts/register.js"></script>
-	<script src="/scripts/header-small-title.js"></script>
+	<script src="/scripts/partials/header-small-title.js"></script>
+	<script src="/scripts/auth/register.js"></script>
+
 </body>
 
 </html>
