--- a/src/views/pages/booking/payment.ejs
+++ b/src/views/pages/booking/payment.ejs
@@ -11,8 +11,8 @@
 	<title>2WAYS.com</title>
 </head>
 
-
 <body>
+
 	<%- include('../../partials/header-small') %>
 	<%- include('../../partials/nav-tree', { nav_tree__data: [
         { text: 'Trang chủ', link: '/' },
@@ -186,22 +186,6 @@
 										</div>
 									</div>
 
-									<!-- <div class="account-item clickable">
-                    <img src="/imgs/bidv.png" alt="" />
-                    <div class="name-bank">
-                      <h5>BIDV</h5>
-                      <h5 style="text-align: end"><b>*0319</b></h5>
-                    </div>
-                  </div>
-
-                  <div class="account-item clickable">
-                    <img src="/imgs/agribank.png" alt="" />
-                    <div class="name-bank">
-                      <h5>Agribank</h5>
-                      <h5 style="text-align: end"><b>*1698</b></h5>
-                    </div>
-                  </div> -->
-
 									<div class="account-item clickable addBankAccountBtn" style="color: #a3adad">
 										<span class="material-symbols-outlined"> add_card </span>
 										<h5 class="">Thêm tài khoản ngân hàng liên kết</h5>
@@ -258,19 +242,17 @@
 			</div>
 		</form>
 	</div>
-	<%# include('../../components/otp')  %>
-	<%- include('../../components/success-popup')  %>
 
+	<%- include('../../components/success-popup')  %>
 	<%- include('../../partials/footer') %>
 
+	<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+	<script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+	<script src="/scripts/booking/payment.js"></script>
+	<script src="/scripts/components/otp.js"></script>
 
 </body>
-<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-<script src="/scripts/order-payment.js"></script>
-<script src="/scripts/otp.js"></script>
-<script src="/scripts/header-small.js"></script>
 
 
 </html>
