--- a/src/views/pages/account/change-password.ejs
+++ b/src/views/pages/account/change-password.ejs
@@ -2,13 +2,14 @@
 <html lang="vi">
 
 <head>
-	<meta charset="UTF-8" />
-	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+
 	<link rel="shortcut icon" href="/imgs/favicon.svg" type="image/x-icon">
-	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous" />
-	<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,300,1,0" />
-	<link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.css" />
-	<link rel="stylesheet" href="/styles/pages/account/change-password.css" />
+	<link rel="stylesheet" href="/styles/pages/account/change-password.css">
+
 	<title>2WAYS.com</title>
 
 </head>
@@ -27,14 +28,14 @@
 	<main class="change-password-container">
 		<aside class="aside-content">
 			<div class="aside-content__profile">
-				<img class="aside-content__img" src="/imgs/user/<%= user.avatar ?? 'default.jpg' %>" alt="" />
+				<img class="aside-content__img" src="/imgs/user/<%= user.avatar ?? 'default.jpg' %>" alt="">
 				<div class="aside-content__detail">
 					<p class="aside-content__detail-bold"><%= user.last_name + " " + user.first_name %></p>
 					<p style="font-size: 12px"><i>Chỉnh sửa avatar</i></p>
 				</div>
 			</div>
 
-			<hr />
+			<hr>
 
 			<div class="aside-section">
 				<a style='text-decoration: none;' href="/account/information">
@@ -51,7 +52,7 @@
 				</a>
 			</div>
 
-			<hr />
+			<hr>
 
 			<div class="aside-item logout-btn">
 				<a style='text-decoration: none' id="logoutButton">
@@ -85,7 +86,7 @@
 				<h1>Đổi mật khẩu</h1>
 				<p>Đổi mật khẩu cho tài khoản của bạn</p>
 			</div>
-			<hr />
+			<hr>
 			<div class="form-input__title form__item-change1">
 				<h1>Mật khẩu</h1>
 				<p>Đổi mật khẩu thường xuyên để giữ tài khoản của bạn được bảo mật</p>
@@ -98,7 +99,7 @@
 				<h1>Đổi mật khẩu</h1>
 				<p>Đổi mật khẩu cho tài khoản của bạn</p>
 			</div>
-			<hr />
+			<hr>
 			<p class="form__center">
 				Đặt mật khẩu có ít nhất là 8 ký tự, trong đó có cả chữ và số.
 			</p>
@@ -106,17 +107,17 @@
 			<div class="form__items">
 				<div class="form__item form__oldPass">
 					<h1>Mật khẩu cũ:</h1>
-					<input class="form-control" type="text" placeholder="Nhập mật khẩu cũ" name='oldPass' />
+					<input class="form-control" type="text" placeholder="Nhập mật khẩu cũ" name='oldPass'>
 				</div>
 
 				<div class="form__item form__newPass">
 					<h1>Mật khẩu mới:</h1>
-					<input class="form-control form__password" type="text" placeholder="Nhập mật khẩu mới" name='newPass' />
+					<input class="form-control form__password" type="text" placeholder="Nhập mật khẩu mới" name='newPass'>
 				</div>
 
 				<div class="form__item form__newPassConfirm">
 					<h1>Xác nhận mật khẩu:</h1>
-					<input class="form-control form__password-confirm" type="text" placeholder="Nhập lại mật khẩu mới" name='newPassConfirm' />
+					<input class="form-control form__password-confirm" type="text" placeholder="Nhập lại mật khẩu mới" name='newPassConfirm'>
 				</div>
 			</div>
 
@@ -133,6 +134,7 @@
 	<%- include('../../partials/footer.ejs') %>
 	<%- include('../../components/success-popup.ejs') %>
 
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 	<script src="/scripts/account/change-password.js"></script>
 	<script src="/scripts/components/logout-popup.js"></script>
 	<script src="/scripts/partials/search-bar.js"></script>
