--- a/src/views/pages/account/information.ejs
+++ b/src/views/pages/account/information.ejs
@@ -2,15 +2,17 @@
 <html lang="vi">
 
 <head>
-	<meta charset="UTF-8" />
-	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+
 	<link rel="shortcut icon" href="/imgs/favicon.svg" type="image/x-icon">
-	<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,300,1,0" />
-	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous" />
-	<link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.css" />
-	<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-	<link rel="stylesheet" href="/styles/pages/account/information.css" />
+	<link rel="stylesheet" href="/styles/pages/account/information.css">
+
 	<title>2WAYS.com</title>
+
 </head>
 
 <body>
@@ -26,14 +28,14 @@
 	<main class="account-container">
 		<aside class="aside-content">
 			<div class="aside-content__profile">
-				<img class="aside-content__img" src="/imgs/user/<%= user.avatar ?? 'default.jpg' %>" alt="Avatar" />
+				<img class="aside-content__img" src="/imgs/user/<%= user.avatar ?? 'default.jpg' %>" alt="Avatar">
 				<div class="aside-content__detail">
 					<p class="aside-content__detail-bold"><%= user.last_name + " " + user.first_name %></p>
 					<p style="font-size: 12px"><i>Chỉnh sửa avatar</i></p>
 				</div>
 			</div>
 
-			<hr />
+			<hr>
 
 			<div class="aside-section">
 				<a style='text-decoration: none;' href="/account/information">
@@ -50,7 +52,7 @@
 				</a>
 			</div>
 
-			<hr />
+			<hr>
 
 			<div class="aside-item logout-btn">
 				<a style='text-decoration: none' id="logoutButton">
@@ -86,30 +88,30 @@
 				<p>Cập nhật thông tin của bạn</p>
 			</div>
 
-			<hr />
+			<hr>
 
 			<div class="form__items">
 				<div class="form__item">
 					<h1>Họ:</h1>
-					<input class="form-control" type="text" value="<%= data.last_name %>" readonly />
+					<input class="form-control" type="text" value="<%= data.last_name %>" readonly>
 
 					<h1>Tên:</h1>
-					<input class="form-control" type="text" value="<%= data.first_name %>" readonly />
+					<input class="form-control" type="text" value="<%= data.first_name %>" readonly>
 				</div>
 
 				<div class="form__item">
 					<h1>Địa chỉ Email:</h1>
-					<input class="form-control" type="text" value="<%= data.email %>" readonly />
+					<input class="form-control" type="text" value="<%= data.email %>" readonly>
 				</div>
 
 				<div class="form__item">
 					<h1>Ngày sinh:</h1>
-					<input class="form-control account__birthday <%- data.birthday ? null : 'unfilled' %>" type="date" placeholder="<%= data.birthday ?? 'Thêm ngày sinh' %>" value="<%= data.birthday %>" readonly />
+					<input class="form-control account__birthday <%- data.birthday ? null : 'unfilled' %>" type="date" placeholder="<%= data.birthday ?? 'Thêm ngày sinh' %>" value="<%= data.birthday %>" readonly>
 				</div>
 
 				<div class="form__item">
 					<h1>Giới tính:</h1>
-					<input class="form-control <%- data.sex ? null : 'unfilled' %>" type="text" placeholder="<%= data.sex ?? 'Thêm giới tính' %>" readonly />
+					<input class="form-control <%- data.sex ? null : 'unfilled' %>" type="text" placeholder="<%= data.sex ?? 'Thêm giới tính' %>" readonly>
 				</div>
 			</div>
 			<div class="form__submitbutton">
@@ -124,25 +126,25 @@
 				<p>Cập nhật thông tin của bạn</p>
 			</div>
 
-			<hr />
+			<hr>
 
 			<form id='informationPut' class="form__items" action='/account/information' method="POST">
 				<div class="form__item">
 					<h1>Họ:</h1>
-					<input class="form-control" name='last_name' type="text" value="<%= data.last_name %>" required />
+					<input class="form-control" name='last_name' type="text" value="<%= data.last_name %>" required>
 
 					<h1>Tên:</h1>
-					<input class="form-control" name='first_name' type="text" value="<%= data.first_name %>" required />
+					<input class="form-control" name='first_name' type="text" value="<%= data.first_name %>" required>
 				</div>
 
 				<div class="form__item">
 					<h1>Địa chỉ Email:</h1>
-					<input class="form-control" type="text" value="<%= data.email %>" disabled />
+					<input class="form-control" type="text" value="<%= data.email %>" disabled>
 				</div>
 
 				<div class="form__item">
 					<h1>Ngày sinh:</h1>
-					<input class="form-control account__birthday" name='birthday' type="date" value="<%= data.birthday %>" />
+					<input class="form-control account__birthday" name='birthday' type="date" value="<%= data.birthday %>">
 				</div>
 
 				<div class="form__item">
@@ -188,6 +190,8 @@
 	<%- include('../../components/success-popup')  %>
 	<%- include('../../partials/footer') %>
 
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+	<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
 	<script src="/scripts/account/information.js"></script>
 	<script src="/scripts/partials/search-bar.js"></script>
 	<script src="/scripts/partials/header-medium.js"></script>
