--- a/src/views/pages/auth/register.ejs
+++ b/src/views/pages/auth/register.ejs
@@ -2,13 +2,17 @@
 <html lang="vi">
 
 <head>
-	<meta charset="UTF-8" />
-	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+
 	<link rel="shortcut icon" href="/imgs/favicon.svg" type="image/x-icon">
-	<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,300,1,0" />
-	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous" />
-	<link rel="stylesheet" href="/styles/pages/auth/register.css" />
+	<link rel="stylesheet" href="/styles/pages/auth/register.css">
+
 	<title>2WAYS.com</title>
+
 </head>
 
 <body>
@@ -21,9 +25,9 @@
 	<main class="content-container">
 
 		<section class="intro">
-			<img src="/imgs/logo--filled.svg" alt="2WAYS.com" class="intro__logo" />
+			<img src="/imgs/logo--filled.svg" alt="2WAYS.com" class="intro__logo">
 			<div class="intro__content">
-				<p class="intro__slogan">Cần nơi dừng chân?<br />Đến ngay 2WAYS.com</p>
+				<p class="intro__slogan">Cần nơi dừng chân?<br>Đến ngay 2WAYS.com</p>
 				<p class="intro__sub-title">Tìm phòng với giá ưu đãi nhất từ khách sạn, nhà nghỉ...</p>
 			</div>
 		</section>
@@ -36,12 +40,12 @@
 				<div class="row double">
 					<div class="col">
 						<label for="form__first-name" class="form-label">Họ <span class="red">*</span></label>
-						<input type="text" class="form-control form__first-name" id="form__first-name" placeholder="Nhập họ" />
+						<input type="text" class="form-control form__first-name" id="form__first-name" placeholder="Nhập họ">
 						<div class="error"></div>
 					</div>
 					<div class="col">
 						<label for="form__last-name" class="form-label">Tên <span class="red">*</span></label>
-						<input type="text" class="form-control form__last-name" id="form__last-name" aria-describedby="emailHelp" placeholder="Nhập tên" />
+						<input type="text" class="form-control form__last-name" id="form__last-name" aria-describedby="emailHelp" placeholder="Nhập tên">
 						<div class="error"></div>
 					</div>
 				</div>
@@ -51,7 +55,7 @@
 					<div class="input_form">
 						<label for="form__email" class="form-label">Email <span class="red">*</span></label>
 						<!-- nhung để text -->
-						<input type="text" class="form-control form__email" id="form__email" placeholder="Nhập email" />
+						<input type="text" class="form-control form__email" id="form__email" placeholder="Nhập email">
 						<div class="error"></div>
 					</div>
 				</div>
@@ -60,7 +64,7 @@
 					<label for="form__password" class="form-label">Mật khẩu <span class="red">*</span></label>
 					<p class="form-text register__note">Đặt mật khẩu có ít nhất là 8 ký tự, trong đó có cả chữ và số, không bao gồm dấu cách và ký tự đặc biệt.</p>
 					<div class="input_form">
-						<input type="password" class="form-control form__password" id="form__password" placeholder="Nhập mật khẩu" />
+						<input type="password" class="form-control form__password" id="form__password" placeholder="Nhập mật khẩu">
 						<span class="material-symbols-outlined" id="eye-open-psw">visibility</span>
 						<div class="error"></div>
 					</div>
@@ -70,7 +74,7 @@
 					<label for="form__password-confirm" class="form-label">Nhập lại mật khẩu <span class="red">*</span></label>
 
 					<div class="input_form">
-						<input type="password" class="form-control form__password-confirm" id="form__password-confirm" placeholder="Nhập lại mật khẩu" />
+						<input type="password" class="form-control form__password-confirm" id="form__password-confirm" placeholder="Nhập lại mật khẩu">
 						<span class="material-symbols-outlined" id="eye-open-cpsw">visibility</span>
 						<div class="error"></div>
 					</div>
@@ -80,7 +84,7 @@
 
 			<a href="/auth/login" class="btn register__login" role="button">Bạn đã có tài khoản? <span class="highlight">Đăng nhập</span></a>
 			<p class="register__confirm">
-				Bằng việc đăng ký, bạn đã đồng ý với 2WAYS về <br />
+				Bằng việc đăng ký, bạn đã đồng ý với 2WAYS về <br>
 				<a href="/terms-of-use">điều khoản dịch vụ</a> và
 				<a href="/privacy-policy">chính sách bảo mật</a>.
 			</p>
@@ -90,7 +94,7 @@
 
 	<%- include('../../partials/footer.ejs') %>
 
-	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 	<script src="/scripts/partials/header-small-title.js"></script>
 	<script src="/scripts/auth/register.js"></script>
 
