--- a/src/views/pages/booking/detail.ejs
+++ b/src/views/pages/booking/detail.ejs
@@ -2,13 +2,17 @@
 <html lang="vi">
 
 <head>
-	<meta charset="UTF-8" />
-	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+
 	<link rel="shortcut icon" href="/imgs/favicon.svg" type="image/x-icon">
-	<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,300,0..1,0" />
-	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-	<link rel="stylesheet" href="/styles/pages/booking/detail.css" />
+	<link rel="stylesheet" href="/styles/pages/booking/detail.css">
+
 	<title>2WAYS.com</title>
+
 </head>
 
 <body>
@@ -100,13 +104,13 @@
 											<h1>Đánh giá phòng</h1>
 											<div class="close-popup">
 												<svg xmlns="http://www.w3.org/2000/svg" width="36" height="35" viewBox="0 0 36 35" fill="none">
-													<path d="M11.8666 26.037L17.9999 19.9037L24.1333 26.037L26.5184 23.6518L20.3851 17.5185L26.5184 11.3851L24.1333 8.99996L17.9999 15.1333L11.8666 8.99996L9.48141 11.3851L15.6147 17.5185L9.48141 23.6518L11.8666 26.037ZM17.9999 34.5555C15.6431 34.5555 13.4283 34.1083 11.3555 33.2139C9.28264 32.3194 7.47956 31.1055 5.94622 29.5722C4.41289 28.0389 3.199 26.2358 2.30456 24.1629C1.41011 22.0901 0.962891 19.8753 0.962891 17.5185C0.962891 15.1617 1.41011 12.9469 2.30456 10.874C3.199 8.8012 4.41289 6.99811 5.94622 5.46478C7.47956 3.93145 9.28264 2.71756 11.3555 1.82311C13.4283 0.928667 15.6431 0.481445 17.9999 0.481445C20.3567 0.481445 22.5715 0.928667 24.6444 1.82311C26.7172 2.71756 28.5203 3.93145 30.0536 5.46478C31.587 6.99811 32.8009 8.8012 33.6953 10.874C34.5897 12.9469 35.037 15.1617 35.037 17.5185C35.037 19.8753 34.5897 22.0901 33.6953 24.1629C32.8009 26.2358 31.587 28.0389 30.0536 29.5722C28.5203 31.1055 26.7172 32.3194 24.6444 33.2139C22.5715 34.1083 20.3567 34.5555 17.9999 34.5555Z" fill="#00696D" />
+													<path d="M11.8666 26.037L17.9999 19.9037L24.1333 26.037L26.5184 23.6518L20.3851 17.5185L26.5184 11.3851L24.1333 8.99996L17.9999 15.1333L11.8666 8.99996L9.48141 11.3851L15.6147 17.5185L9.48141 23.6518L11.8666 26.037ZM17.9999 34.5555C15.6431 34.5555 13.4283 34.1083 11.3555 33.2139C9.28264 32.3194 7.47956 31.1055 5.94622 29.5722C4.41289 28.0389 3.199 26.2358 2.30456 24.1629C1.41011 22.0901 0.962891 19.8753 0.962891 17.5185C0.962891 15.1617 1.41011 12.9469 2.30456 10.874C3.199 8.8012 4.41289 6.99811 5.94622 5.46478C7.47956 3.93145 9.28264 2.71756 11.3555 1.82311C13.4283 0.928667 15.6431 0.481445 17.9999 0.481445C20.3567 0.481445 22.5715 0.928667 24.6444 1.82311C26.7172 2.71756 28.5203 3.93145 30.0536 5.46478C31.587 6.99811 32.8009 8.8012 33.6953 10.874C34.5897 12.9469 35.037 15.1617 35.037 17.5185C35.037 19.8753 34.5897 22.0901 33.6953 24.1629C32.8009 26.2358 31.587 28.0389 30.0536 29.5722C28.5203 31.1055 26.7172 32.3194 24.6444 33.2139C22.5715 34.1083 20.3567 34.5555 17.9999 34.5555Z" fill="#00696D">
 												</svg>
 											</div>
 										</div>
 										<div class="section--popup">
 											<div class="popup-profile">
-												<img src="/imgs/user/<%= user.avatar %>" alt="" />
+												<img src="/imgs/user/<%= user.avatar %>" alt="">
 												<div class="aside__content--detail">
 													<p style="font-weight: 500; margin: 12px 0 0 0"> <%= user.email %> </p>
 													<p style="font-size: 12px"> <i>Đăng công khai</i> </p>
@@ -121,7 +125,7 @@
 												</div>
 											</div>
 											<div class="custom-input">
-												<input name="rating_context" type="text" class="form-control input--detail" placeholder="" />
+												<input name="rating_context" type="text" class="form-control input--detail" placeholder="">
 											</div>
 											<div class="form--submitbutton">
 												<button class="form--submit1 closeBtn">Hủy</button>
@@ -234,7 +238,7 @@
 	<%- include('../../components/cancel-popup') %>
 	<%- include('../../components/success-popup') %>
 
-	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 	<script src="/scripts/components/review-popup.js" defer></script>
 	<script src="/scripts/components/cancel-popup.js" defer></script>
 	<script src="/scripts/booking/detail.js"></script>
