--- a/src/views/pages/booking/information.ejs
+++ b/src/views/pages/booking/information.ejs
@@ -2,13 +2,17 @@
 <html lang="vi">
 
 <head>
-	<meta charset="UTF-8" />
-	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+
 	<link rel="shortcut icon" href="/imgs/favicon.svg" type="image/x-icon">
-	<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,300,0,0" />
-	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous" />
-	<link rel="stylesheet" href="/styles/pages/booking/information.css" />
+	<link rel="stylesheet" href="/styles/pages/booking/information.css">
+
 	<title>2WAYS.com</title>
+
 </head>
 
 <body>
@@ -69,7 +73,7 @@
 						<h5><b>1 đêm</b></h5>
 					</div>
 
-					<hr />
+					<hr>
 
 					<div class="your-choice">
 						<h5>Bạn đã chọn</h5>
@@ -99,7 +103,7 @@
 			<form style="gap: 12px; display: flex; flex-direction: column" method="POST" action="/booking/information">
 				<section id="" class="section--content">
 					<div class="confirm-account">
-						<img src="/imgs/user/<%= user.avatar ?? 'user_1.jpg' %>" alt="" />
+						<img src="/imgs/user/<%= user.avatar ?? 'user_1.jpg' %>" alt="">
 						<div class="account-detail">
 							<h5>Bạn đã đăng nhập bằng:</h5>
 							<div class="email-logout">
@@ -116,23 +120,23 @@
 						<div class="form--item row" style="flex-direction: row; gap: 0px;">
 							<div class="col-6">
 								<h4 class="required">Họ</h4>
-								<input class="form-control" type="text" name="last_name" placeholder="Nhâp họ vào đây" value='<%= user.last_name %>' required />
+								<input class="form-control" type="text" name="last_name" placeholder="Nhâp họ vào đây" value='<%= user.last_name %>' required>
 							</div>
 							<div class="col-6">
 								<h4 class="required">Tên</h4>
-								<input class="form-control" type="text" name="first_name" placeholder="Nhập tên vào đây" value="<%= user.first_name %>" required />
+								<input class="form-control" type="text" name="first_name" placeholder="Nhập tên vào đây" value="<%= user.first_name %>" required>
 							</div>
 						</div>
 
 						<div class="form--item">
 							<h4 class="required">Địa chỉ email</h4>
-							<input class="form-control" type="email" name="email" placeholder="Nhập email vào đây" value="<%= user.email %>" required />
+							<input class="form-control" type="email" name="email" placeholder="Nhập email vào đây" value="<%= user.email %>" required>
 							<span class="note-text">Email xác nhận đặt phòng sẽ được gửi đến địa chỉ này.</h5>
 						</div>
 
 						<div class="form--item">
 							<h4 class="required">Điện thoại cá nhân</h4>
-							<input class="form-control" type="number" name="phone" placeholder="Nhập số điện thoại vào đây" required />
+							<input class="form-control" type="number" name="phone" placeholder="Nhập số điện thoại vào đây" required>
 							<span class="note-text">Cần thiết để xác nhận đặt phòng của bạn.</h5>
 						</div>
 					</div>
@@ -214,7 +218,7 @@
 	<%- include('../../partials/footer') %>
 
 	<script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 	<script src="/scripts/booking/information.js"></script>
 
 </body>
