--- a/src/views/pages/notifications/promotion.ejs
+++ b/src/views/pages/notifications/promotion.ejs
@@ -2,14 +2,18 @@
 <html lang="vi">
 
 <head>
+
 	<meta charset="UTF-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+
 	<link rel="shortcut icon" href="/imgs/favicon.svg" type="image/x-icon">
-	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous" />
-	<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,300,1,0" />
 	<link rel="stylesheet" href="/styles/pages/search/daterangepicker.css">
 	<link rel="stylesheet" href="/styles/pages/notification/promotion.css">
+
 	<title>2WAYS.com</title>
+
 </head>
 
 <body>
@@ -50,6 +54,7 @@
 
 	<%- include('../../partials/footer.ejs') %>
 
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 	<script src="/scripts/notifications/promotion.js"></script>
 	<script src="/scripts/partials/search-bar.js"></script>
 	<script src="/scripts/partials/header-medium.js"></script>
