--- a/src/views/pages/search/results.ejs
+++ b/src/views/pages/search/results.ejs
@@ -29,7 +29,7 @@
 		<aside class="filter-sidebar">
 			<div class="filter-sidebar__expanded-map">
 				<div class="filter-sidebar__map-icon">
-					<span class="material-symbols-outlined">location_on</span>
+					<span class="material-symbols-outlined icon--filled">location_on</span>
 				</div>
 				<div class="filter-sidebar__map-button">
 					<a href="#" target="blank" type="button" class="btn map-button">Hiển thị trên bản đồ</a>
@@ -38,7 +38,7 @@
 
 			<div class="filter-sidebar__main">
 				<div class="filter-sidebar__heading">
-					<p class="filter-sidebar__heading-content"><span class="material-symbols-outlined">filter_alt</span>Chọn lọc theo:</p>
+					<p class="filter-sidebar__heading-content"><span class="material-symbols-outlined icon--filled">filter_alt</span>Chọn lọc theo:</p>
 				</div>
 				<hr />
 				<div class="filter-sidebar__price">
@@ -155,41 +155,41 @@
 					<div class="form-check">
 						<input type="checkbox" name="acco_star" class="form-check-input acco-star" value=5>
 						<label class="form-check-label">
-							<span class="material-symbols-outlined">grade</span>
-							<span class="material-symbols-outlined">grade</span>
-							<span class="material-symbols-outlined">grade</span>
-							<span class="material-symbols-outlined">grade</span>
-							<span class="material-symbols-outlined">grade</span>
+							<span class="material-symbols-outlined icon--filled">grade</span>
+							<span class="material-symbols-outlined icon--filled">grade</span>
+							<span class="material-symbols-outlined icon--filled">grade</span>
+							<span class="material-symbols-outlined icon--filled">grade</span>
+							<span class="material-symbols-outlined icon--filled">grade</span>
 						</label>
 					</div>
 					<div class="form-check">
 						<input type="checkbox" name="acco_star" class="form-check-input acco-star" value=4>
 						<label class="form-check-label">
-							<span class="material-symbols-outlined">grade</span>
-							<span class="material-symbols-outlined">grade</span>
-							<span class="material-symbols-outlined">grade</span>
-							<span class="material-symbols-outlined">grade</span>
+							<span class="material-symbols-outlined icon--filled">grade</span>
+							<span class="material-symbols-outlined icon--filled">grade</span>
+							<span class="material-symbols-outlined icon--filled">grade</span>
+							<span class="material-symbols-outlined icon--filled">grade</span>
 						</label>
 					</div>
 					<div class="form-check">
 						<input type="checkbox" name="acco_star" class="form-check-input acco-star" value=3>
 						<label class="form-check-label">
-							<span class="material-symbols-outlined">grade</span>
-							<span class="material-symbols-outlined">grade</span>
-							<span class="material-symbols-outlined">grade</span>
+							<span class="material-symbols-outlined icon--filled">grade</span>
+							<span class="material-symbols-outlined icon--filled">grade</span>
+							<span class="material-symbols-outlined icon--filled">grade</span>
 						</label>
 					</div>
 					<div class="form-check">
 						<input type="checkbox" name="acco_star" class="form-check-input acco-star" value=2>
 						<label class="form-check-label">
-							<span class="material-symbols-outlined">grade</span>
-							<span class="material-symbols-outlined">grade</span>
+							<span class="material-symbols-outlined icon--filled">grade</span>
+							<span class="material-symbols-outlined icon--filled">grade</span>
 						</label>
 					</div>
 					<div class="form-check">
 						<input type="checkbox" name="acco_star" class="form-check-input acco-star" value=1>
 						<label class="form-check-label">
-							<span class="material-symbols-outlined">grade</span>
+							<span class="material-symbols-outlined icon--filled">grade</span>
 						</label>
 					</div>
 					<div class="form-check">
