Clear unnecessary css

--- a/src/public/styles/pages/account/history.css
+++ b/src/public/styles/pages/account/history.css
@@ -1,11 +1,9 @@
-@import url("/styles/base.css");
+@import url('/styles/base.css');
 @import url("/styles/partials/header-medium.css");
 @import url("/styles/components/room-in-hs.css");
-@import url("/styles/partials/footer.css");
 @import url("/styles/components/review-popup.css");
 @import url("/styles/components/next-page.css");
 @import url("/styles/components/success-popup.css");
-@import url("/styles/partials/nav-tree.css");
 
 html {
     font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
