--- a/src/public/styles/pages/booking/information.css
+++ b/src/public/styles/pages/booking/information.css
@@ -1,7 +1,5 @@
-@import url("/styles/base.css");
+@import url('/styles/base.css');
 @import url('/styles/partials/header-small.css');
-@import url('/styles/partials/nav-tree.css');
-@import url('/styles/partials/footer.css');
 
 .payment--container {
     width: 80%;
