--- a/src/public/styles/pages/site/index.css
+++ b/src/public/styles/pages/site/index.css
@@ -1,6 +1,5 @@
-@import url("/styles/base.css");
+@import url('/styles/base.css');
 @import url("/styles/partials/header-full.css");
-@import url("/styles/partials/footer.css");
 
 .container--index {
 	margin: 12px auto;
