--- a/src/public/styles/base.css
+++ b/src/public/styles/base.css
@@ -1,6 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,300,0..1,0');
 @import url('https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@24,300,0..1,0');
 @import url('https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.css');
+@import url("/styles/partials/nav-tree.css");
+@import url("/styles/partials/footer.css");
 
 :root {
 	--primary-color-1: #085457;
