--- a/src/public/styles/components/search-result-nsale.css
+++ b/src/public/styles/components/search-result-nsale.css
@@ -171,6 +171,7 @@
 }
 
 .nform__submit {
+    text-decoration: none;
     padding: 10px 28px;
     background-color: #FE9C0B;
     color: white;
@@ -178,6 +179,10 @@
     font-weight: 500;
     border-radius: 8px;
     margin-top: 4px;
+}
+
+.nform__submit:hover {
+    box-shadow: 0 1px 3px 1px rgba(0, 0, 0, 0.2), 0 0 2px 0 rgba(0, 0, 0, 0.2);
 }
 
 .nresult-block__main-container {
