--- a/src/public/styles/components/search-result-sale.css
+++ b/src/public/styles/components/search-result-sale.css
@@ -222,6 +222,7 @@
 }
 
 .form__submit {
+    text-decoration: none;
     padding: 10px 28px;
     background-color: #FE9C0B;
     color: white;
@@ -229,6 +230,10 @@
     font-weight: 500;
     border-radius: 8px;
     margin-top: 4px;
+}
+
+.form__submit:hover {
+    box-shadow: 0 1px 3px 1px rgba(0, 0, 0, 0.2), 0 0 2px 0 rgba(0, 0, 0, 0.2);
 }
 
 .result-block__main-container {
