--- a/src/public/styles/pages/account/information.css
+++ b/src/public/styles/pages/account/information.css
@@ -1,8 +1,6 @@
-@import url("/styles/base.css");
+@import url('/styles/base.css');
 @import url("/styles/partials/header-medium.css");
-@import url("/styles/partials/footer.css");
 @import url("/styles/components/success-popup.css");
-@import url("/styles/partials/nav-tree.css");
 
 html {
     font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
