--- a/src/public/styles/pages/account/payment.css
+++ b/src/public/styles/pages/account/payment.css
@@ -1,25 +1,9 @@
-@import url("/styles/base.css");
+@import url('/styles/base.css');
 @import url("/styles/partials/header-medium.css");
-@import url("/styles/partials/footer.css");
-@import url("/styles/partials/nav-tree.css");
 @import url("/styles/components/bank-account-popup.css");
 @import url("/styles/components/credit-account-popup.css");
 @import url("/styles/components/otp.css");
 @import url("/styles/components/success-popup.css");
-@import url("/styles/partials/nav-tree.css");
-
-/* html {
-    font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-    font-size: 16px;
-    color: var(--black);
-}
-
-body {
-    width: 100vw;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-} */
 
 .payment-account-container {
     margin-top: 12px;
