--- a/src/public/styles/pages/auth/login.css
+++ b/src/public/styles/pages/auth/login.css
@@ -1,19 +1,5 @@
-@import url("/styles/base.css");
+@import url('/styles/base.css');
 @import url("/styles/partials/header-small-title.css");
-@import url("/styles/partials/footer.css");
-
-/* html {
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-size: 16px;
-    color: #000000;
-} */
-
-/* body {
-    width: 100vw;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-} */
 
 .content-container {
     width: 80%;
@@ -78,7 +64,7 @@
     font-size: 0.8rem;
     width: 100%;
     padding: 0;
-  }
+}
 
 .login__title {
     text-align: center;
