--- a/src/public/styles/pages/booking/detail.css
+++ b/src/public/styles/pages/booking/detail.css
@@ -1,10 +1,8 @@
-@import url("/styles/base.css");
+@import url('/styles/base.css');
 @import url("/styles/components/cancel-popup.css");
 @import url("/styles/components/review-popup.css");
 @import url("/styles/components/success-popup.css");
 @import url("/styles/partials/header-small.css");
-@import url("/styles/partials/footer.css");
-@import url("/styles/partials/nav-tree.css");
 
 body {
     width: 100vw;
