--- a/src/public/styles/pages/booking/payment.css
+++ b/src/public/styles/pages/booking/payment.css
@@ -1,7 +1,5 @@
-@import url("/styles/base.css");
+@import url('/styles/base.css');
 @import url("/styles/partials/header-small.css");
-@import url("/styles/partials/footer.css");
-@import url("/styles/partials/nav-tree.css");
 @import url("/styles/components/success-popup.css");
 @import url("/styles/components/otp.css");
 
