--- a/src/public/styles/pages/site/about.css
+++ b/src/public/styles/pages/site/about.css
@@ -1,7 +1,5 @@
-@import url("/styles/base.css");
+@import url('/styles/base.css');
 @import url("/styles/partials/header-small.css");
-@import url("/styles/partials/nav-tree.css");
-@import url("/styles/partials/footer.css");
 
 .container--about {
 	width: 80%;
