--- a/src/public/styles/pages/search/results.css
+++ b/src/public/styles/pages/search/results.css
@@ -73,6 +73,7 @@ hr {
 }
 
 .map-button:hover {
+    background-color: var(--primary-color-2);
     color: white;
 }
 
@@ -202,7 +203,7 @@ hr {
 }
 
 .form-check-label .material-symbols-outlined {
-    color: orange;
+    color: var(--primary-color-4);
 }
 
 .filter-sidebar__content-extend {
