Fix avatar in booking/information

--- a/src/views/pages/booking/information.ejs
+++ b/src/views/pages/booking/information.ejs
@@ -103,7 +103,7 @@
 			<form style="gap: 12px; display: flex; flex-direction: column" method="POST" action="/booking/information">
 				<section id="" class="section--content">
 					<div class="confirm-account">
-						<img src="/imgs/user/<%= user.avatar ?? 'user_1.jpg' %>" alt="">
+						<img src="/imgs/user/<%= user.avatar ?? 'default.jpg' %>" alt="">
 						<div class="account-detail">
 							<h5>Bạn đã đăng nhập bằng:</h5>
 							<div class="email-logout">
